# jakt-lsp.nvim

./: .gitignore  .gitmodules  README.md  json.cpp  json.h  main.cpp  meson.build  numbers.h
rpc/: base.h  rpc.cpp
